Archive2/46/b166b339e5e52a/output
main.cpp:1:1: error: unknown type name 'Vec3'
Vec3<double> inferRayDirection(const Vec2<double>& pixel) const restrict(cpu, amp) {
^
main.cpp:1:5: error: expected unqualified-id
Vec3<double> inferRayDirection(const Vec2<double>& pixel) const restrict(cpu, amp) {
    ^
2 errors generated.
